--- a/index.html
+++ b/index.html
@@ -1,47 +1,47 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-  <meta charset="UTF-8">
-  <title>Barbearia Alura</title>
-  <link rel="stylesheet" href="styles/reset.css">
-  <link rel="stylesheet" href="styles/style.css">
-</head>
-<body>
-  <header>
-    <div class="caixa">
-      <h1><img src="images/logo.png" alt="Logo da Barbearia Alura"></h1>
-      <nav>
+  <head>
+    <meta charset="UTF-8">
+    <title>Barbearia Alura</title>
+    <link rel="stylesheet" href="styles/reset.css">
+    <link rel="stylesheet" href="styles/style-home.css">
+  </head>
+  <body>
+    <header>
+      <div class="caixa">
+        <h1><img src="images/logo.png" alt="Logo da Barbearia Alura"></h1>
+        <nav>
+          <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="produtos.html">Produtos</a></li>
+            <li><a href="contato.html">Contato</a></li>
+          </ul>
+        </nav>
+      </div>
+    </header>
+    <main>
+      <img class="banner" src="images/banner.jpg" alt="Banner">
+      <div class="principal">
+        <h2 class="titulo-centralizado">Sobre a Barbearia Alura</h2>
+        <p>Localizada no coração da cidade a <strong>Barbearia Alura</strong> traz para o mercado o que há de melhor para o seu cabelo e barba. Fundada em 2019, a Barbearia Alura já é destaque na cidade e conquista novos clientes a cada dia.</p>
+        <p class="missao"><em>Nossa missão é: <strong>"Proporcionar auto-estima e qualidade de vida aos clientes"</strong>.</em></p>
+        <p>Oferecemos profissionais experientes e antenados às mudanças no mundo da moda. O atendimento possui padrão de excelência e agilidade, garantindo qualidade e satisfação dos nossos clientes.
+        </p>
+      </div>
+      <div class="beneficios">
+        <h3 class="titulo-centralizado">Benefícios</h3>
         <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="produtos.html">Produtos</a></li>
-          <li><a href="#">Contato</a></li>
+          <li class="itens">Atendimento aos clientes</li>
+          <li class="itens">Espaço diferenciado</li>
+          <li class="itens">Localização</li>
+          <li class="itens">Profissionais qualificados</li>
         </ul>
-      </nav>
-    </div>
-  </header>
-  <main>
-    <img class="banner" src="images/banner.jpg" alt="Banner">
-    <div class="principal">
-      <h2 class="titulo-centralizado">Sobre a Barbearia Alura</h2>
-      <p>Localizada no coração da cidade a <strong>Barbearia Alura</strong> traz para o mercado o que há de melhor para o seu cabelo e barba. Fundada em 2019, a Barbearia Alura já é destaque na cidade e conquista novos clientes a cada dia.</p>
-      <p class="missao"><em>Nossa missão é: <strong>"Proporcionar auto-estima e qualidade de vida aos clientes"</strong>.</em></p>
-      <p>Oferecemos profissionais experientes e antenados às mudanças no mundo da moda. O atendimento possui padrão de excelência e agilidade, garantindo qualidade e satisfação dos nossos clientes.
-      </p>
-    </div>
-    <div class="beneficios">
-      <h3 class="titulo-centralizado">Benefícios</h3>
-      <ul>
-        <li class="itens">Atendimento aos clientes</li>
-        <li class="itens">Espaço diferenciado</li>
-        <li class="itens">Localização</li>
-        <li class="itens">Profissionais qualificados</li>
-      </ul>
-      <img class="imagem-beneficios" src="images/beneficios.jpg" alt="Benefícios">
-    </div>
-  </main>
-  <footer>
-    <img src="images/logo-branco.png" alt="">
-    <p class="copyright">&copy; Copyright Barbearia Alura - 2019</p>
-  </footer>
-</body>
+        <img class="imagem-beneficios" src="images/beneficios.jpg" alt="Benefícios">
+      </div>
+    </main>
+    <footer>
+      <img src="images/logo-branco.png" alt="">
+      <p class="copyright">&copy; Copyright Barbearia Alura - 2019</p>
+    </footer>
+  </body>
 </html>
