--- a/contato.html
+++ b/contato.html
@@ -22,18 +22,18 @@
     <main>
       <form>
         <label for="nomesobrenome">Nome e sobrenome</label>
-        <input type="text" id="nomesobrenome" class="input-padrao">
+        <input type="text" id="nomesobrenome" class="input-padrao" required>
         <label for="email">Email</label>
-        <input type="email" id="email" class="input-padrao">
+        <input type="email" id="email" class="input-padrao" placeholder="seuemail@dominio.com" required>
         <label for="telefone">Telefone</label>
-        <input type="tel" id="telefone" class="input-padrao">
+        <input type="tel" id="telefone" class="input-padrao" placeholder="(XX) XXXXX-XXXX" required>
         <label for="mensagem">Mensagem</label>
-        <textarea id="mensagem" cols="70" rows="10" class="input-padrao"></textarea>
+        <textarea id="mensagem" cols="70" rows="10" class="input-padrao" required></textarea>
         <div>
           <p>Como prefere o nosso contato?</p>
           <label for="radio-email"><input type="radio" name="contato" value="email" id="radio-email">Email</label>        
           <label for="radio-telefone"><input type="radio" name="contato" value="telefone" id="radio-telefone">Telefone</label>
-          <label for="radio-whatsapp"><input type="radio" name="contato" value="email" id="radio-whatsapp">WhatsApp</label>
+          <label for="radio-whatsapp"><input type="radio" name="contato" value="email" id="radio-whatsapp" checked>WhatsApp</label>
         </div>
         <div>
           <p>Qual horário prefere ser atendido?</p>
@@ -43,7 +43,7 @@
             <option>Noite</option>
           </select>
         </div>
-        <label><input type="checkbox" class="checkbox">Gostaria de receber nossas novidades por email?</label>
+        <label><input type="checkbox" class="checkbox" checked>Gostaria de receber nossas novidades por email?</label>
         <input type="submit" value="Enviar formulário">
       </form>
     </main>
