--- a/contato.html
+++ b/contato.html
@@ -29,26 +29,26 @@
         <input type="tel" id="telefone" class="input-padrao" placeholder="(XX) XXXXX-XXXX" required>
         <label for="mensagem">Mensagem</label>
         <textarea id="mensagem" cols="70" rows="10" class="input-padrao" required></textarea>
-        <div>
-          <p>Como prefere o nosso contato?</p>
+        <fieldset>
+          <legend>Como prefere o nosso contato?</legend>
           <label for="radio-email"><input type="radio" name="contato" value="email" id="radio-email">Email</label>        
           <label for="radio-telefone"><input type="radio" name="contato" value="telefone" id="radio-telefone">Telefone</label>
           <label for="radio-whatsapp"><input type="radio" name="contato" value="email" id="radio-whatsapp" checked>WhatsApp</label>
-        </div>
-        <div>
-          <p>Qual horário prefere ser atendido?</p>
+        </fieldset>
+        <fieldset>
+          <legend>Qual horário prefere ser atendido?</legend>
           <select>
             <option>Manhã</option>
             <option>Tarde</option>
             <option>Noite</option>
           </select>
-        </div>
+        </fieldset>
         <label><input type="checkbox" class="checkbox" checked>Gostaria de receber nossas novidades por email?</label>
         <input type="submit" value="Enviar formulário">
       </form>
     </main>
     <footer>
-      <img src="images/logo-branco.png" alt="">
+      <img src="images/logo-branco.png" alt="Logo da Barbearia Alura">
       <p class="copyright">&copy; Copyright Barbearia Alura - 2019</p>
     </footer>
   </body>
