--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Barbearia Alura</title>
     <link rel="stylesheet" href="styles/reset.css">
-    <link rel="stylesheet" href="styles/style-home.css">
+    <link rel="stylesheet" href="styles/style.css">
   </head>
   <body>
     <header>
@@ -19,17 +19,27 @@
         </nav>
       </div>
     </header>
+    
+    <img class="banner" src="images/banner.jpg" alt="Banner">
+
     <main>
-      <img class="banner" src="images/banner.jpg" alt="Banner">
-      <div class="principal">
-        <h2 class="titulo-centralizado">Sobre a Barbearia Alura</h2>
+      <section class="principal">
+        <h2 class="titulo-principal">Sobre a Barbearia Alura</h2>
+        <img class="utensilios" src="images/utensilios.jpg" alt="Utensilios de um barbeiro">
         <p>Localizada no coração da cidade a <strong>Barbearia Alura</strong> traz para o mercado o que há de melhor para o seu cabelo e barba. Fundada em 2019, a Barbearia Alura já é destaque na cidade e conquista novos clientes a cada dia.</p>
         <p class="missao"><em>Nossa missão é: <strong>"Proporcionar auto-estima e qualidade de vida aos clientes"</strong>.</em></p>
         <p>Oferecemos profissionais experientes e antenados às mudanças no mundo da moda. O atendimento possui padrão de excelência e agilidade, garantindo qualidade e satisfação dos nossos clientes.
         </p>
-      </div>
-      <div class="beneficios">
-        <h3 class="titulo-centralizado">Benefícios</h3>
+      </section>
+
+      <section class="mapa">
+        <h3 class="titulo-principal">Nosso estabelecimento</h3>
+        <p>Nosso estabelecimento está localizado no coração da cidade.</p>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d58501.4488759457!2d-46.65774191967832!3d-23.592116400225358!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1salura%20sao%20paulo!5e0!3m2!1sen!2sbr!4v1645094352473!5m2!1sen!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+      </section>
+
+      <section class="beneficios">
+        <h3 class="titulo-principal">Benefícios</h3>
         <ul>
           <li class="itens">Atendimento aos clientes</li>
           <li class="itens">Espaço diferenciado</li>
@@ -37,7 +47,7 @@
           <li class="itens">Profissionais qualificados</li>
         </ul>
         <img class="imagem-beneficios" src="images/beneficios.jpg" alt="Benefícios">
-      </div>
+      </section>
     </main>
     <footer>
       <img src="images/logo-branco.png" alt="">
