Gradiente e outra mudanças

--- a/index.html
+++ b/index.html
@@ -35,18 +35,25 @@
       <section class="mapa">
         <h3 class="titulo-principal">Nosso estabelecimento</h3>
         <p>Nosso estabelecimento está localizado no coração da cidade.</p>
-        <iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d58501.4488759457!2d-46.65774191967832!3d-23.592116400225358!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1salura%20sao%20paulo!5e0!3m2!1sen!2sbr!4v1645094352473!5m2!1sen!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+        <div class="mapa-conteudo"><iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d58501.4488759457!2d-46.65774191967832!3d-23.592116400225358!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1salura%20sao%20paulo!5e0!3m2!1sen!2sbr!4v1645094352473!5m2!1sen!2sbr" width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe></div>
       </section>
 
       <section class="beneficios">
         <h3 class="titulo-principal">Benefícios</h3>
-        <ul>
-          <li class="itens">Atendimento aos clientes</li>
-          <li class="itens">Espaço diferenciado</li>
-          <li class="itens">Localização</li>
-          <li class="itens">Profissionais qualificados</li>
-        </ul>
-        <img class="imagem-beneficios" src="images/beneficios.jpg" alt="Benefícios">
+        <div class="conteudo-beneficios">
+          <ul class="lista-beneficios">
+            <li class="itens">Atendimento aos clientes</li>
+            <li class="itens">Espaço diferenciado</li>
+            <li class="itens">Localização</li>
+            <li class="itens">Profissionais qualificados</li>
+            <li class="itens">Pontualidade</li>
+            <li class="itens">Limpeza</li>
+          </ul>
+          <img class="imagem-beneficios" src="images/beneficios.jpg" alt="Benefícios">
+        </div>
+        <div class="video">
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/wcVVXUV0YUY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
       </section>
     </main>
     <footer>
