Melhoria geral CSS

--- a/contato.html
+++ b/contato.html
@@ -2,6 +2,7 @@
 <html lang="pt-br">
   <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width">
     <title>Contato - Barbearia Alura</title>
     <link rel="stylesheet" href="styles/reset.css">
     <link rel="stylesheet" href="styles/style.css">
@@ -19,7 +20,7 @@
         </nav>
       </div>
     </header>
-    <main>
+    <main class="conteudo-contato">
       <form>
         <label for="nomesobrenome">Nome e sobrenome</label>
         <input type="text" id="nomesobrenome" class="input-padrao" required>
